[Issue 6796] Execution - Text left aligned

--- a/tm/tm.web/src/main/webapp/styles/structure.css
+++ b/tm/tm.web/src/main/webapp/styles/structure.css
@@ -1158,7 +1158,7 @@ div#execute-evaluation-rightside>label {
 .execution-status-combo-class {
 	width: 128px;
 	height: 18px;
-	text-align: right;
+	text-align: left;
 }
 
 /* ------------------------------------------ */
